#86 Use OppModelCache with pre-loaded data